# claymore

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: main.yml
app/: Cargo.toml
app/src/: loop.edn  main.edn  main.rs
src/: fetch-fragment.edn  lib.rs  test-chain.edn
tool/: Cargo.toml  build.rs
tool/src/: main.rs
