[package]
name = "claymore"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainblocks = { git = "https://github.com/fragcolor-xyz/chainblocks.git", features = ["run_bindgen", "dllblock", "cblisp"] }

[build-dependencies]
cmake = "0.1"

[patch."https://github.com/fragcolor-xyz/chainblocks.git"]
chainblocks = { path = "../chainblocks/rust" }
