[package]
name = "claytool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claylib = { path = "../library" }
shards = { path = "../../shards/rust", features = ["run_bindgen", "dllshard", "scripting"] }
edn-rs = "0.17.0"
clap = { version = "3.0.14", features = ["derive"] }
